@@ -67,6 +67,12 @@ void ContextMenuClientQt::speak(const String&)
     notImplemented();
 }
 
+bool ContextMenuClientQt::isSpeaking()
+{
+    notImplemented();
+    return false;
+}
+
 void ContextMenuClientQt::stopSpeaking()
 {
     notImplemented();
