@@ -44,6 +44,7 @@ namespace WebCore {
         virtual void downloadURL(const KURL& url);
         virtual void lookUpInDictionary(Frame*);
         virtual void speak(const String&);
+        virtual bool isSpeaking();
         virtual void stopSpeaking();
         virtual void searchWithGoogle(const Frame*);
     };
