@@ -1,3 +1,12 @@
+2009-06-29  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        Fix the Qt build, add missing isSpeaking() implementation to
+        ContextMenuClient.
+
+        * WebCoreSupport/ContextMenuClientQt.cpp:
+        (WebCore::ContextMenuClientQt::isSpeaking):
+        * WebCoreSupport/ContextMenuClientQt.h:
+
 2009-06-28  Sriram Yadavalli  <sriram.yadavalli@nokia.com>
 
         Reviewed by Eric Seidel.
